syntax = "proto3";
package Proto.Lego.CodeGen.Tests.Workflows;
option csharp_namespace = "Proto.Lego.CodeGen.Tests.Workflows";

import "google/protobuf/empty.proto";

service TestWorkflow {

}

message TestWorkflowInput {
	string aggregate_one_id = 1;
	string aggregate_two_id = 2;
	string string_to_save = 3;
}